Updating JSON reponse shape for account related GET requests

--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -44,53 +44,88 @@ _Query Parameters_
 {
   "data": [
     {
+      "validator_count": 0,
+      "staked_balance": 0,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 11,
       "sec_nonce": 0,
       "sec_balance": 0,
-      "nonce": 2,
+      "nonce": 11,
+      "mobile_balance": 0,
+      "iot_balance": 0,
+      "hotspot_count": 0,
       "dc_nonce": 0,
       "dc_balance": 0,
-      "block": 435239,
-      "balance": 0,
+      "block": 1600652,
+      "balance": 97,
       "address": "13etjTqyGLK7WQh8pp9VJy5ejh5MXmwFee2eAi3TfAA5kS1jEJb"
     },
     {
+      "validator_count": 0,
+      "staked_balance": 0,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 1,
       "sec_nonce": 0,
       "sec_balance": 0,
       "nonce": 1,
+      "mobile_balance": 0,
+      "iot_balance": 0,
+      "hotspot_count": 0,
       "dc_nonce": 0,
       "dc_balance": 0,
-      "block": 435239,
+      "block": 1600652,
       "balance": 0,
       "address": "14Vshtwv9RMY5GuTe1sgLDJmmF2f46EW3etEJzjDjhKJSEprtHh"
     },
     {
+      "validator_count": 0,
+      "staked_balance": 0,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 8,
       "sec_nonce": 0,
       "sec_balance": 0,
-      "nonce": 0,
+      "nonce": 8,
+      "mobile_balance": 0,
+      "iot_balance": 0,
+      "hotspot_count": 1,
       "dc_nonce": 0,
       "dc_balance": 0,
-      "block": 435239,
-      "balance": 404040732,
+      "block": 1600652,
+      "balance": 70074024822,
       "address": "14PaJeSfNp5Q3MtDw5yEsJwb2kHJqbcjjLe9aycjroqNFnL4EyS"
     },
     {
+      "validator_count": 0,
+      "staked_balance": 0,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 0,
       "sec_nonce": 0,
       "sec_balance": 0,
       "nonce": 0,
+      "mobile_balance": 0,
+      "iot_balance": 0,
+      "hotspot_count": 1,
       "dc_nonce": 0,
       "dc_balance": 0,
-      "block": 435239,
-      "balance": 1025990703,
+      "block": 1600652,
+      "balance": 35831331399,
       "address": "13rUthiDQUeY9HfwoZFpkqtsbtaubzRyerCsSu1qdDXuVZGL45k"
     },
     {
+      "validator_count": 0,
+      "staked_balance": 0,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 2,
       "sec_nonce": 0,
       "sec_balance": 0,
-      "nonce": 0,
+      "nonce": 2,
+      "mobile_balance": 0,
+      "iot_balance": 0,
+      "hotspot_count": 0,
       "dc_nonce": 0,
       "dc_balance": 0,
-      "block": 435239,
-      "balance": 179087000000,
+      "block": 1600653,
+      "balance": 453431287,
       "address": "14Xg1SqiJDsmM2YvchR4UacevcuxjfyrjdyNEpRMmfBU7vrZba9"
     }
   ],
@@ -134,24 +169,38 @@ Result for `/v1/accounts/rich?limit=2`
 {
   "data": [
     {
-      "address": "1398hLeHESZHE5jVtaLAV5fdg2vrUeZEs2B92t7TzeQTtugr8dL",
-      "balance": 616416488712965,
-      "block": 489719,
-      "dc_balance": 0,
+      "validator_count": 310,
+      "staked_balance": 270000000000000,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 428,
+      "sec_nonce": 0,
+      "sec_balance": 166205166949,
+      "nonce": 428,
+      "mobile_balance": 1500000000000000000,
+      "iot_balance": 0,
+      "hotspot_count": 0,
       "dc_nonce": 0,
-      "nonce": 3,
-      "sec_balance": 351543978600,
-      "sec_nonce": 0
+      "dc_balance": 0,
+      "block": 1600655,
+      "balance": 209859912321099,
+      "address": "1398hLeHESZHE5jVtaLAV5fdg2vrUeZEs2B92t7TzeQTtugr8dL"
     },
     {
-      "address": "14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz6S",
-      "balance": 292033864604925,
-      "block": 489719,
-      "dc_balance": 0,
-      "dc_nonce": 0,
-      "nonce": 0,
+      "validator_count": 0,
+      "staked_balance": 0,
+      "speculative_sec_nonce": 0,
+      "speculative_nonce": 4,
+      "sec_nonce": 0,
       "sec_balance": 166398670100,
-      "sec_nonce": 0
+      "nonce": 4,
+      "mobile_balance": 0,
+      "iot_balance": 0,
+      "hotspot_count": 0,
+      "dc_nonce": 0,
+      "dc_balance": 0,
+      "block": 1600656,
+      "balance": 83885120803643,
+      "address": "14GWyFj9FjLHzoN3aX7Tq7PL6fEg4dfWPY8CrK8b9S5ZrcKDz6S"
     }
   ]
 }
@@ -197,15 +246,21 @@ _Path Parameters_
 ```json
 {
   "data": {
-    "address": "1122ZQigQfeeyfSmH2i4KM4XMQHouBqK4LsTp33ppP3W2Knqh8gY",
-    "balance": 0,
-    "block": 311833,
-    "dc_balance": 100000000000000,
-    "dc_nonce": 0,
-    "nonce": 0,
-    "sec_balance": 0,
+    "validator_count": 0,
+    "staked_balance": 0,
+    "speculative_sec_nonce": 0,
+    "speculative_nonce": 1,
     "sec_nonce": 0,
-    "speculative_nonce": 0
+    "sec_balance": 0,
+    "nonce": 1,
+    "mobile_balance": 0,
+    "iot_balance": 0,
+    "hotspot_count": 0,
+    "dc_nonce": 0,
+    "dc_balance": 0,
+    "block": 1600656,
+    "balance": 0,
+    "address": "1122ZQigQfeeyfSmH2i4KM4XMQHouBqK4LsTp33ppP3W2Knqh8gY"
   }
 }
 ```
