--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -15,11 +15,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 :::tip
 
-HNT staking has been enabled for Validators on Mainnet!
+HNT staking using validators will be discontinued in 2023 Q1 with the impementation of HIP 70 
 
 :::
 
-Validators are a new entity on the Helium Blockchain that perform the work of the consensus group
+Validators are a to be discontinued entity on the Helium Blockchain that perform the work of the consensus group
 including verifying transactions and adding new blocks to the blockchain.
 
 ## Mainnet
