--- a/docs/mine-hnt/validators/penalties.mdx
+++ b/docs/mine-hnt/validators/penalties.mdx
@@ -9,10 +9,10 @@ slug: /mine-hnt/validators/penalties
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-Validators are an entity on the Helium Blockchain that perform the work of the consensus
-group including verifying transactions and adding new blocks to the blockchain. As Validators will
-play an important role in the expansion, stability and success of the Helium network,
-it's critical that community run Validators meet the performance requirements of their role.
+Validators are an entity on the Helium Blockchain that perform the work of the consensus group
+including verifying transactions and adding new blocks to the blockchain. As Validators will play an
+important role in the expansion, stability and success of the Helium network, it's critical that
+community run Validators meet the performance requirements of their role.
 
 The consensus group is made up of Validator nodes that are rewarded with $HNT for working together
 to verify transactions and producing blocks.
