--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -162,7 +162,7 @@ frequency plan for use in your country.
 | Argentina               | AU915          |
 | Armenia                 | EU868          |
 | Aruba                   | Unknown        |
-| Australia               | AU915          |
+| Australia               | AS923/AU915 dualplan         |
 | Austria                 | EU868          |
 | Azerbaijan              | EU433          |
 
@@ -180,7 +180,7 @@ frequency plan for use in your country.
 | Benin                           | EU868          |
 | Bermuda                         | US915          |
 | Bhutan                          | EU868          |
-| Bolivia                         | AU915          |
+| Bolivia                         | AS923_1          |
 | Bonaire Sint Eustatius and Saba | EU868          |
 | Bosnia and Herzegovina          | EU868          |
 | Botswana                        | EU868          |
@@ -315,7 +315,7 @@ frequency plan for use in your country.
 
 | Country    | Frequency Plan |
 | ---------- | -------------- |
-| Kazakhstan | EU433          |
+| Kazakhstan | IN865          |
 | Kenya      | EU868          |
 | Kiribati   | Unknown        |
 | Kosovo     | EU868          |
@@ -394,7 +394,7 @@ frequency plan for use in your country.
 
 | Country                 | Frequency Plan |
 | ----------------------- | -------------- |
-| Pakistan                | AS923-1        |
+| Pakistan                | AS923          |
 | Palau                   | Unknown        |
 | Palestinian Territories | Unknown        |
 | Panama                  | AU915          |
@@ -522,4 +522,4 @@ frequency plan for use in your country.
 | Country  | Frequency Plan |
 | -------- | -------------- |
 | Zambia   | EU868          |
-| Zimbabwe | EU433          |
+| Zimbabwe | EU868          |
