--- a/docs/troubleshooting/witnesses.mdx
+++ b/docs/troubleshooting/witnesses.mdx
@@ -21,9 +21,7 @@ only.
 :::info
 
 Beacons happen automatically, and Hotspots witness automatically. Successful Witnessing,
-Challenging, and Beaconing relies on a stable and fast internet connection. This means _relayed_
-Hotspots will often fail these tasks. More below.
-
+Challenging, and Beaconing relies on a stable and fast internet connection.
 :::
 
 ## Witnessed List in Explorer and Helium App
