--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -53,6 +53,8 @@ join and add items to the agenda to be discussed.
 - [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
 - [Video recordings of all previous community calls](https://vimeo.com/dewialliance)
 
+<!--
+ Comment out HHHH until we know if/when its comming back
 #### Helium Hacks Happy Hour
 
 Held every Wednesday at 2PM Pacific on Zoom, Helium Hacks Happy Hour (4H) covers all things
@@ -61,7 +63,7 @@ or simply want to learn, 4H is for you.
 
 - [Register for Helium Hacks Happy Hour](https://tinyurl.com/3kjrv9z5)
 - [Selected highlights of previous Happy Hours](https://www.youtube.com/playlist?list=PLtKQNefsR5zMDgluPZtPL3wwFBG7e_FHl)
-
+-->
 
 ### Social Media
 
