--- a/docs/faq/security.mdx
+++ b/docs/faq/security.mdx
@@ -22,7 +22,7 @@ done, and are doing, to combat potential risks:
   regulations for operating in the unlicensed 902-928MHz spectrum, the CE mark for the European
   868MHz spectrum, etc.
 - Expected bandwidth utilized by devices is 1-5kb/s (about the size of a long text message) and
-  devices communicate with the Hotspot over LongFi, not IP (Internet Protocol).
+  devices communicate with the Hotspot over LoRaWAN, not IP (Internet Protocol).
 - While very inexpensive to use, the Helium network is not free. Any transaction requires data
   credits. This is inherently a deterrent for potential scammers.
 - Helium wallets (included within the Helium App) use asymmetric keys to keep your private key
