replace LongFi with LoRaWAN

--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -32,7 +32,7 @@ distribution:
 | Witnesses             | poc_witnesses_percent   | Distributed to selected Hotspots that witness a beacon packet as part of a PoC Challenge.                                                    |
 | Consensus Group       | consensus_percent       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.                           |
 | Security              | securities_percent      | Awarded to Helium, Inc and other Network investors who hold Security Tokens.                                                                 |
-| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LongFi sensor data for sensors on the Network during that epoch.                               |
+| Network Data Transfer | dc_percent              | Distributed each epoch to Hotspots that route LoRaWAN sensor data for sensors on the Network during that epoch.                              |
 
 :::note
 
