--- a/docs/faq/helium-network.mdx
+++ b/docs/faq/helium-network.mdx
@@ -57,8 +57,8 @@ network. It’s powered by them and owned by them.
 
 ### How far does the Helium Network reach and does it use radio frequency?
 
-Helium’s LongFi technology, the combination of the Helium blockchain and LoRaWAN wireless protocol,
-uses sub-GHz radio frequency. Depending on conditions, Helium LongFi can reach miles and even
+Helium’s LoRaWAN technology, the combination of the Helium blockchain and LoRaWAN wireless protocol,
+uses sub-GHz radio frequency. Depending on conditions, Helium LoRaWAN can reach miles and even
 connect devices that are inside buildings unlike GPS and cellular signals.
 
 ### What kind of cryptocurrency do I earn?
@@ -108,4 +108,3 @@ independent members of the Helium community.
 
 Here’s a [helpful blog about the Helium Community](https://docs.helium.com/community-governance/)
 and how you can join [the Helium Discord](https://discord.gg/helium).
-
