--- a/docs/faq/security.mdx
+++ b/docs/faq/security.mdx
@@ -9,7 +9,7 @@ slug: /faq/security
 
 The security of the network and Hotspot owners is of the utmost importance to us. While the Internet
 connection is necessary, it is only used to provide backhaul to the Hotspot for blockchain
-peer-to-peer and LongFi networking. As security concerns are ever present, here is what we have
+peer-to-peer and LoRaWAN networking. As security concerns are ever present, here is what we have
 done, and are doing, to combat potential risks:
 
 - The most common attack vector to get into a device like the Hotspot is inbound ports. As of May
