--- a/docs/faq/security.mdx
+++ b/docs/faq/security.mdx
@@ -9,7 +9,7 @@ slug: /faq/security
 
 The security of the network and Hotspot owners is of the utmost importance to us. While the Internet
 connection is necessary, it is only used to provide backhaul to the Hotspot for blockchain
-peer-to-peer and LongFi networking. As security concerns are ever present, here is what we have
+peer-to-peer and LoRaWAN networking. As security concerns are ever present, here is what we have
 done, and are doing, to combat potential risks:
 
 - The most common attack vector to get into a device like the Hotspot is inbound ports. As of May
@@ -22,7 +22,7 @@ done, and are doing, to combat potential risks:
   regulations for operating in the unlicensed 902-928MHz spectrum, the CE mark for the European
   868MHz spectrum, etc.
 - Expected bandwidth utilized by devices is 1-5kb/s (about the size of a long text message) and
-  devices communicate with the Hotspot over LongFi, not IP (Internet Protocol).
+  devices communicate with the Hotspot over LoRaWAN, not IP (Internet Protocol).
 - While very inexpensive to use, the Helium network is not free. Any transaction requires data
   credits. This is inherently a deterrent for potential scammers.
 - Helium wallets (included within the Helium App) use asymmetric keys to keep your private key
