--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -65,8 +65,7 @@ that makes it possible.
 
 ### Mobile Apps, Web Apps, and Sites
 
-- [Helium Wallet App](https://github.com/helium/wallet-app) - Helium wallet app for iOS and
-  Android.
+- [Helium Wallet App](https://github.com/helium/wallet-app) - Helium wallet app for iOS and Android.
 
 - [Helium Hotspot App](https://github.com/helium/hotspot-app) - Helium hotspot app for iOS and
   Android.
