Update open-source.mdx (#1030)
* Update open-source.mdx

Added Helium wallet app link

* line wrap fix

Co-authored-by: Sam Gutentag <developer@samgutentag.com>

--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -65,7 +65,9 @@ that makes it possible.
 
 ### Mobile Apps, Web Apps, and Sites
 
-- [Helium Mobile Wallet](https://github.com/helium/hotspot-app) - Helium hotspot app for iOS and
+- [Helium Wallet App](https://github.com/helium/wallet-app) - Helium wallet app for iOS and Android.
+
+- [Helium Hotspot App](https://github.com/helium/hotspot-app) - Helium hotspot app for iOS and
   Android.
 
 - [Helium Blockchain Explorer](https://github.com/helium/explorer) - Code that powers the greatest
