--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -15,7 +15,7 @@ The Helium Community is the home to over tens of thousands developers and networ
 collaborate every day across the world to build the Helium Network. Any and all are welcome to take
 part. Join us!
 
-### Discord
+## Discord
 
 The [Helium Discord](https://discord.gg/helium) is the primary communication channel for the Helium
 Network Community. Here you'll find real-time, in-depth discussion on all parts of the Helium
@@ -23,7 +23,7 @@ Network. It is also the primary venue to get support for using the Network.
 
 - [Join the Helium Community Discord](https://discord.gg/helium)
 
-### Helium Improvement Proposals
+## Helium Improvement Proposals
 
 The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as
 "HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and
@@ -41,9 +41,7 @@ encouraged to create HIPs, and participate in the governance process.
 
 - [HIP Repo on GitHub](https://github.com/helium/HIP)
 
-### Regularly Community Events
-
-#### Monthly Community Calls
+## Monthly Community Calls
 
 The Helium Community holds monthly video calls (led by the
 [Helium Foundation](https://www.helium.foundation/)). These typically happen on the the **4th
@@ -53,17 +51,7 @@ join and add items to the agenda to be discussed.
 - [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
 - [Video recordings of all previous community calls](https://vimeo.com/dewialliance)
 
-#### Helium Hacks Happy Hour
-
-Held every Wednesday at 2PM Pacific on Zoom, Helium Hacks Happy Hour (4H) covers all things
-hardware, sensors, and connectivity. If you're building something on the Network and want to share,
-or simply want to learn, 4H is for you.
-
-- [Register for Helium Hacks Happy Hour](https://tinyurl.com/3kjrv9z5)
-- [Selected highlights of previous Happy Hours](https://www.youtube.com/playlist?list=PLtKQNefsR5zMDgluPZtPL3wwFBG7e_FHl)
-
-
-### Social Media
+## Social Media
 
 Helium is everywhere. Here's the full list:
 
