Identity/ownership changes.

--- a/docs/mine-hnt/full-hotspots/full-hotspots.mdx
+++ b/docs/mine-hnt/full-hotspots/full-hotspots.mdx
@@ -19,10 +19,10 @@ process is governed via
 
 ## Approved Makers
 
-[Helium, Inc.](https://helium.com) was the first Hotspot manufacturer. Starting in early 2019, they
-produced the first hardware capable of mining HNT and providing LoRaWAN wireless coverage. In total,
-Helium, Inc. produced and sold the first 13,000 Hotspots to the Helium community to seed the
-Network.
+Nova Labs (formerly known as Helium Systems, Inc) was the first Hotspot manufacturer. Starting in 
+early 2019, they produced the first hardware capable of mining HNT and providing LoRaWAN wireless 
+coverage. In total, Nova Labs produced and sold the first 13,000 Hotspots to the Helium community to
+seed the Network.
 
 Since the introduction of
 [HIP19](https://github.com/helium/HIP/blob/master/0019-third-party-manufacturers.md), additional
@@ -32,7 +32,7 @@ onboard their unique Hotspots before they are granted access to the blockchain.
 
 | Maker Name                                              | HIP19 Application                                                                                            | Date Approved | Onboarding Maker Address                                                                                                                        |
 | :------------------------------------------------------ | :----------------------------------------------------------------------------------------------------------- | :------------ | :---------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Helium, Inc.](https://helium.com)                      | N/A                                                                                                          | NA            | [13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53](https://explorer.helium.com/accounts/13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53) |
+| [Helium Systems, Inc.](https://helium.com)              | N/A                                                                                                          | NA            | [13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53](https://explorer.helium.com/accounts/13daGGWvDQyTyHFDCPz8zDSVTWgPNNfJ4oh31Teec4TRWfjMx53) |
 | [Nebra Ltd](https://www.nebra.com/)                     | [Nebra](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/nebra-ltd.md)          | 2020-12-10    | [13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3](https://explorer.helium.com/accounts/13Zni1he7KY9pUmkXMhEhTwfUpL9AcEV1m2UbbvFsrU9QPTMgE3) |
 | [SyncroB.it](https://syncrob.it/)                       | [SyncroB.it](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/syncrobit.md)     | 2020-12-14    | [14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR](https://explorer.helium.com/accounts/14rb2UcfS9U89QmKswpZpjRCUVCVu1haSyqyGY486EvsYtvdJmR) |
 | [RAK Wireless/CalChip](https://www.calchipconnect.com/) | [RAK/CalChip](https://github.com/dewi-alliance/hotspot-manufacturers/blob/main/applications/rak-wireless.md) | 2020-12-29    | [13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY](https://explorer.helium.com/accounts/13ENbEQPAvytjLnqavnbSAzurhGoCSNkGECMx7eHHDAfEaDirdY) |
