--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -16,8 +16,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
         <div className="headertext">
           <h1 style={{ marginTop: 0 }}>Mine HNT</h1>
           <h2 className="subtitle">
-            Helium Hotspots mine $HNT and were originally built by Helium, Inc. but are now built by
-            our growing ecosystem of approved manufacturers.
+            Helium Hotspots mine $HNT and are built by our growing ecosystem of approved 
+            manufacturers.
           </h2>
           <div>
             <a href="/mine-hnt/full-hotspots">
