--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -138,8 +138,8 @@ No. You must wait until the validator is out of the consensus group.
 
 :::info
 
-Links to these Staking Providers are provided as is. Helium, Inc. is not directly associated with
-any of the following vendors and makes no endorsements about the quality of their offering.
+Links to these Staking Providers are provided as is. Helium Foundation is not directly associated 
+with any of the following vendors and makes no endorsements about the quality of their offering.
 Additionally, any pricing details listed here are likely to be out of date. Please verify pricing
 details with the given staking provider.
 
