--- a/docs/blockchain/consensus-protocol/consensus-protocol.mdx
+++ b/docs/blockchain/consensus-protocol/consensus-protocol.mdx
@@ -75,9 +75,8 @@ For a more complete overview of how Validators are elected to the consensus grou
 
 At the end of each epoch, mining rewards are distributed by the consensus group to the wallet
 addresses that have earned them. Currently `65%` of all mining rewards go to the hotspot
-infrastructure \(with the remaining `35%` being distributed to Helium, Inc and other network
-investors\). A graphical overview of token reward system can be
-[viewed here](https://www.helium.com/tokens).
+infrastructure \(with the remaining `35%` being distributed network investors\). A graphical 
+overview of token reward system can be [viewed here](https://www.helium.com/tokens).
 
 During the course of any epoch, Hotspots are rewarded for the following list of activities:
 
