--- a/docs/blockchain/packet-purchasing/packet-purchasing.mdx
+++ b/docs/blockchain/packet-purchasing/packet-purchasing.mdx
@@ -24,7 +24,7 @@ Packet purchasing is implemented on the Helium Blockchain with two specific prim
 Organizationally Unique Identifiers (OUIs) are registered identities on the Helium Blockchain. To
 send and receive packets to an end-device, a network user needs to be serviced an OUI. This can be
 their own OUI or one operated by a third party, such as [Console](/use-the-network/console) operated
-by Helium, Inc.
+by Helium Foundation.
 
 An OUI has some specificities related to LoRaWAN and packet routing,
 [documented here](/lorawan-on-helium#the-oui), but with respect to the blockchain, what's important
