--- a/docs/faq/hotspot-manufacturers.mdx
+++ b/docs/faq/hotspot-manufacturers.mdx
@@ -7,9 +7,9 @@ slug: /faq/hotspot-manufacturers
 
 # FAQ - Approved Hotspot Manufacturers
 
-Helium, Inc. manufactured the first set of Hotspots on the Network. (These are often referred to as
-"OGs."). Helium, Inc. is no longer manufacturing Hotspots, but there is now an extensive list of
-approved manufactures (known in the community as "Makers")
+Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network. 
+(These are often referred to as "OGs."). Nova Labs no longer manufacturers Hotspots, but there is 
+now an extensive list of approved manufactures (known in the community as "Makers")
 
 - [All approved Hotspots can be found here](https://helium.com/mine)
 - [All approved Makers can be found here](/mine-hnt/full-hotspots).
