--- a/docs/mine-hnt/validators/validators-and-ve-tokens.mdx
+++ b/docs/mine-hnt/validators/validators-and-ve-tokens.mdx
@@ -53,11 +53,11 @@ voting and voting power delegation.
 
 ### What Is veHNT?
 
-veHNT is the vote escrowed token of the native Helium token, HNT.
+veHNT represents the voting power of the Helium network.
 
-In the Helium ecosystem, HNT holders can receive veHNT by locking their HNT from further access for
-a specified period in exchange for voting rights in the HeliumDAO
-([HIP 51](https://github.com/helium/HIP/issues/336)) and other benefits, such as earning MOBILE or
+In the Helium ecosystem, HNT holders can receive veHNT by locking their HNT on chain from further access for
+a specified period in exchange for voting rights and power in the HeliumDAO
+([HIP 51](https://github.com/helium/HIP/issues/336)). Additionally, this provides other benefits, such as earning MOBILE or
 IOT tokens. After the lock-up period ends, the locked up HNT releases to the owner’s wallet.
 
 ### What Was Staked HNT?
@@ -71,6 +71,19 @@ Validator Operators could vote on Helium HIPs with HNT in their wallet or with t
 managed staked Validators. HNT holders who elected to partially stake with a Validator pool operator
 were not able to decide personally on voting; instead, the pool operator controlled their voting
 power.
+
+Currently staked validators receive the 6% of HNT allocated to the consensus group and the 0.85% allocated to the Beacon Challengers. Thus staking token rewards is 6.85% of the total HNT emission per epoch/day/month. This is fixed and unchanged until PoC is removed from earnings and the total figure reduces to 6%.
+After HIP 51-53 are implemented, all the subDAOs combined will get 68% of emitted HNT and the amount allocated to the vote escrowed tokens is a maximum of 6% of this 68% across all subDAOs. So the new figure is 6% x 68% = 4.08% of the total HNT emission per epoch/day/month.
+On 1st Aug 2023 the 68% figure increases by 1% to 69% and the amount issued for veHNT increases proportionally to 4.14%
+This 69% further increases by 1% each year on August 1st untill the max of 85% goes to the subDAOs and the amount issued for vote escrowed tokens increases to 5.1% and stays at this value.
+
+### So, If I'm a Validator, I Move From Roughly a Fixed 6% to a Fixed 4% Reward For Staking?
+
+No. The 6% to validators always varied depending on the luck of consensus group membership and the operational ability of the validator owner to maintain a high score and update status to be selected for consensus. Individual validators earned more or less than 6%.
+
+In the future with veHNT staking this 4% is shared to all the subDAOs and unless you perfectly match your veHNT split delegated with the Utility Score split between the subDAOs, you will also earn more or less than this 4%.
+
+If you stake more proportionally in a subDAO than others, and it does better proportionally than the other subDAOs for size/data rewards, your subDAO rewards amount will increase and its value against HNT will increase.
 
 ### Benefits of Staking veHNT
 
@@ -120,13 +133,12 @@ staking in the network.
 
 ### Where Does My HNT Go if I Stake veHNT?
 
-If you stake your HNT for veHNT, your HNT will go into a multi-sig wallet run by the Helium
-Foundation. In exchange for your HNT, veHNT will deposit into your wallet.
+If you stake your HNT for veHNT, your HNT will become veHNT and will remain completely in your wallet custody. In exchange for your HNT, veHNT will deposit into your wallet.
 
 At the end of the lock-up period, you will receive HNT back to your wallet 1:1 for the HNT you
 staked.
 
-### What is a “lock up” period?
+### What Is a “Lock Up” Period?
 
 You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 6
 and 48 months with block granularity.
@@ -167,9 +179,183 @@ A strong trend in the delegation of veHNT to one subDAO to increase the amount o
 subDAOs treasury will increase the amount of value of HNT sent to that treasury per epoch, but, as
 more delegators are sharing that 6% return, the share of the 6% will be less.
 
-### How can I Obtain veHNT?
+### How Will Staking Work By Using veHNT?
+
+Anyone can stake ANY amount of HNT for a period of 6 months to 4 years. You choose your unstaking date at the time of lock-up.
+The HNT staked is exchanged for veHNT which provides two benefits:
+- Voting in the Helium DAO on new subDAO proposals.
+- Participating in Governance of the HNT DAO.
+
+Anyone can delegate veHNT to a subDAO for token rewards (DAO Utility Score). 
+Delegating veHNT to a subDAO allows you to proportionally earn subDAO token rewards.
+
+For example: If I delegate some veHNT to MOBILE subDAO, I proportionally earn MOBILE rewards.
+
+The staked return in subDAO tokens is about 4%, but will vary based on the amount staked per subDAO.
+
+The Helium network encourages your long-term participation in voting and governance. 
+Those that stake HNT for 6 months, will recieve an exchange of 1:1 HNT to veHNT. 
+Those that stake veHNT for 48 months will recieve an exchange of 1:100 HNT to veHNT. Any time period in between that will be treated on a linear scale from 1 to 100.
+
+For example: I choose to lock up 10 HNT for 6 months. I recieve 10 veHNT. After 6 months, my veHNT decays to 0 and I recieve my 10 HNT back into my wallet.
+
+### How Can I Obtain veHNT?
 
 Staking HNT for veHNT will be done on [Realms](https://dao-beta.mango.markets/realms). This is not
 available today.
 
 Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms today.
+
+### Is There a Staking "Genesis" Period?
+
+For the first 7 days, there will be a 3x bonus for HNT holders becoming new staked veHNT holders.
+Only during the 7 day ”genesis” period, after the HIP 70 migration to the Solana blockchain, will new stakers receive 3x the veHNT they would normally receive for staking.
+
+For example:
+Staking 10 HNT for 6 months gets 30 veHNT (10x1x3) that decays from 30 to 0 veHNT at the end of the staking period and 10 HNT is returned to the wallet.
+
+Staking 20 HNT for 24 months gets around 2598 veHNT (20x43.3x3) and these decay to 60 veHNT at 6 months and then remain at 60 veHNT that decays to 0 veHNT at the end of the last month of the staking period and 20 HNT is returned to the wallet.
+
+### Will I Earn HNT by Staking For veHNT?
+
+No. HNT stakers will not actually earn anymore HNT than they stake.
+
+HNT staked to veHNT will not earn more HNT at the end of the staking period. When you stake 1 HNT to 1 veHNT for your set lock-up period, you will recieve the same amount of HNT back, at the end of the lock-up period.
+
+However, when you stake HNT into veHNT you are allowed to delegate your veHNT into one or more subDAOs (such as IOT and/or MOBILE) and the subDAOs allocate up to 6% of their token emissions to the veHNT owners delegating to that subDAO.
+
+For example: When you delegate your veHNT to the IOT subDAO, you recieve IOT every epoch directly into your Helium Wallet.
+This IOT can then be burned at the IOT subDAO treasury for HNT at the floor level of the IOT/HNT treasury exchange rate and deposited into your Helium Wallet.
+
+### How Do I Stake for veHNT After HIP 51 and 70 Are Implemented?
+
+1. To stake, transfer HNT into your Helium Wallet App (black icon app). Perform this step if you do not already have HNT in your wallet.
+2. Using the Helium Wallet App, stake HNT into veHNT, and define the period of lock-up. The granularity of selection will likely be in blocks.
+3. Using the Helium Wallet App, delegate that veHNT into one or more existing subDAOs. You may have to complete several transactions depending on how many subDAOs you are delegating to.
+4. Your delegated HNT will count towards the subDAOs Utility Score and provide increased HNT earnings in the subDAO's treasury per epoch.
+
+This process should be farily simple in the black wallet app. More instructions will be provided as we get closer to the Solana migration.
+
+All staking and vote escrow delegation operations will be performed within a Solana compatible Wallet App or the Helium wallet CLI. The black Helium Wallet app will be Solana compatible.
+- Staking HNT to veHNT
+- Increasing the veHNT staking period for existing veHNT
+- Delegating veHNT to a subDAO
+- Voting for HNT governance
+- Voting for subDAO governance
+- Receiving the subDAO token that your veHNT is delegated into
+
+### Do I Have to Delegate My veHNT to a subDAO?
+
+No. You can hold your veHNT as is, or delegate to a subDAO at any time.
+
+Note: Once you delegate veHNT, you cannot un-delegate. You must wait for the lock-up period to end.
+
+### How Granular Is The veHNT Linear Decrease?
+
+The decay in the veHNT quantity in a wallet is granulated per epoch, and the veHNT delegated to a subDAo decays at the same rate.
+
+A 48 month lock-in period has approximately 42 (48-6 months) x 30 (days) x 48 epochs (30 mins) = 60,480 linear steps between 100 veHNT and 1 veHNT. 
+
+After 1 epoch has passed after staking a single 1 HNT for 48 months the quantity of veHNT in the wallet will decay from 100 veHNT to 99.998347 veHNT.  This will decrease by this very small amount every 30 mins over the 42 months till it reaches 1 veHNT and remains at 1 veHNT for 6 months.
+
+A table showing the approximate HNT to veHNT multiplier for each month of starting a stake or veHNT a stake has decayed to. Delegating veHNT to a subDAO or veDNT staking decays at the same rates.
+
+| Months staked or decayed to| veHNT held|
+| --------|-------|
+| 0 (Decayed) | 0.0 |
+| 1 (Decayed) | 1.0 |
+| 2 (Decayed) | 1.0 |
+| 3 (Decayed) | 1.0 |
+| 4 (Decayed) | 1.0 |
+| 5 (Decayed) | 1.0 |
+| 6 | 1.0 |
+| 7 | 3.4 |
+| 8 | 5.7 |
+| 9 | 8.1 |
+| 10 | 10.4 |
+| 11 | 12.8 |
+| 12 | 15.1 |
+| 13 | 17.5 |
+| 14 | 19.9 |
+| 15 | 22.2 |
+| 16 | 24.6 |
+| 17 | 26.9 |
+| 18 | 29.3 |
+| 19 | 31.6 |
+| 20 | 34.0 |
+| 21 | 36.4 |
+| 22 | 38.7 |
+| 23 | 41.1 |
+| 24 | 43.4 |
+| 25 | 45.8 |
+| 26 | 48.1 |
+| 27 | 50.5 |
+| 28 | 52.9 |
+| 29 | 55.2 |
+| 30 | 57.6 |
+| 31 | 59.9 |
+| 32 | 62.3 |
+| 33 | 64.6 |
+| 34 | 67 |
+| 35 | 69.4 |
+| 36 | 71.7 |
+| 37 | 74.1 |
+| 38 | 76.4 |
+| 39 | 78.8 |
+| 40 | 81.1 |
+| 41 | 83.5 |
+| 42 | 85.9 |
+| 43 | 88.2 |
+| 44 | 90.6 |
+| 45 | 92.9 |
+| 46 | 95.3 |
+| 47 | 97.6 |
+| 48 | 100 |
+
+### Can I Increase My Staking Period At Any Time?
+
+Yes. You can increase your staking period to the maxium of 48 months at any time. It will be activated at the next epoch.
+
+### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?
+
+No. You define your staking period at the time of staking and cannot unstake for any reason.
+
+### Can I Automate Re-staking?
+
+This is being evaluated as the future default option for staking. This will not be available on day 1 on the Solana migration.
+
+### Can I Transfer my veHNT or Any of The veDNTs, like veIOT or veMOBILE, to Someone Else?
+
+No. veHNT and the like is fully non-transferable, and represents your voting power in the network. It is not a token.
+
+### How Do I Buy veHNT or Any of the veDNTs, Like veIOT or veMOBILE?
+
+You cannot buy veHNT or any of the other veDNTs. It is not a token. veHNT can only be obtained by staking HNT with a lock-up period.
+Likewise, you cannot buy veIOT or veMOBILE.
+veHNT and veDNT have no price in the larger crypto markets.
+
+### What Is the DAO Utility Score?
+
+The Utility score is described in ([HIP 51](https://github.com/helium/HIP/issues/336)). Each new sub-token of HNT, which are MOBILE and IOT (so far), have a utility score which mathematically describes the proportion shared of HNT tokens distributed to them every epoch from the fixed amount allocated to all subDAOs. 
+The higher the utility score, the bigger the proportion of HNT emitted to that subDAO’s treasury per epoch.
+A sub-token with a utility score of 100 would receive ⅔ of the emitted HNT in an epoch, assuming the other token had a score of less than 100. But would receive ⅓ if the other token had a score of 200
+Delegating veHNT to IOT or MOBILE increases the 'V' value in the HIP 51 DAO Utility Score calculation.
+The two other ways the DAO Utility score can be increased are:
+1. The amount of data usage on the subDAO, i.e. the Data Credits burned. This increases the 'D' value in the score.
+2. The Data Credits used to onboard the number of hotspots for that subDAO. This increases the 'A' value in the score.
+
+### Will My subDAO Earnings Remain The Same Over The Time Period Lock-Up?
+
+No, but they are not random like the consesnsus group earnings were for Validators.
+
+They are calculated and paid per epoch. They may increase when:
+- More veHNT is delegated to your subDAO (your treasury gets more HNT) 
+- More hotspot onboarding fees are burned in your subDAO
+- More data is transferred and burned in your subDAO
+
+They may decrease when:
+- More veHNT is delegated in your subDAO - your share is reduced
+- More veHNT is delegated to other subDAOs - other treasuries get more HNT 
+- Your delegated veHNT decays over time
+- More hotspot onboarding fees are burned in other subDAOs
+- More data is transferred and burned in other subDAOs
