page name change

--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -1,8 +1,8 @@
 ---
-id: validators-and-ve-tokens
-title: Validators and Vote Escrowed Tokens
-sidebar_label: Validators and Vote Escrowed Tokens
-slug: /mine-hnt/validators/validators-and-ve-tokens
+id: validators-and-voting-power
+hide_title: true
+sidebar_label: Validators and Voting Power
+slug: /mine-hnt/validators/validators-and-voting-power
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
@@ -12,6 +12,8 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
   style={{ marginBottom: 20 }}
   src={useBaseUrl('img/validators/validators-and-voting-power-header.jpg')}
 />
+
+# Validators and Voting Power
 
 The Helium Foundation is making progress in implementing HIP 70 and migrating our L1 to Solana.
 Check out the
