--- a/docs/mine-hnt/validators/validators-and-voting-power.mdx
+++ b/docs/mine-hnt/validators/validators-and-voting-power.mdx
@@ -92,9 +92,9 @@ No. The 6% to validators always varied depending on the luck of consensus group 
 operational ability of the validator owner to maintain a high score and update status to be selected
 for consensus. Individual validators earned more or less than 6%.
 
-In the future with veHNT staking this 4% is shared to all the subDAOs and unless you perfectly match
-your veHNT split delegated with the Utility Score split between the subDAOs, you will also earn more
-or less than this 4%.
+In the future with veHNT staking this approx 4% of HNT is shared to all the subDAOs and unless you 
+perfectly match your veHNT split delegated with the Utility Score split between the subDAOs, you will 
+also earn more or less than this 4%.
 
 If you stake more proportionally in a subDAO than others, and it does better proportionally than the
 other subDAOs for size/data rewards, your subDAO rewards amount will increase and its value against
@@ -109,8 +109,8 @@ Stakers will additionally be able to delegate veHNT to a subDAO for token reward
 to a subDAO will count towards the DAO Utility Score, the ‘V’ value referenced in HIP 51. The higher
 the DAO Utility Score, the higher the proportion of HNT sent the SubDAO treasury every epoch.
 
-The staked return in subDAO tokens is about 4% but will vary based on the amount delegated per
-subDAO.
+The staked return in subDAO tokens is 6% but individually will vary based on the amount of veHNT
+delegated per subDAO.
 
 ### What Happens to HNT Previously Staked in a Pool?
 
@@ -176,8 +176,8 @@ defines that all subDAOs return a maximum of 6% of their earnings to their veHNT
 designed to be an equal maximum reward level across all subDAOs so that no subDAO can buy their way
 to a higher DAO Utility score.
 
-Returns can be lower than 6% if the subDAO votes to provide a lower token return in return for other
-benefits or similar.
+Returns can be lower than 6% in subDAO tokens if the subDAO votes to provide a lower token return in 
+return for other benefits or similar.
 
 As more HNT deposits in a subDAO's treasury, the DAO Utility Score improves, thus the subDAO's
 Hotspot earnings value in HNT.
@@ -211,17 +211,17 @@ For example: If I delegate some veHNT to MOBILE subDAO, I proportionally earn MO
 The staked return in subDAO tokens is about 4%, but will vary based on the amount staked per subDAO.
 
 The Helium network encourages your long-term participation in voting and governance. Those that
-stake HNT for 6 months, will recieve an exchange of 1:1 HNT to veHNT. Those that stake veHNT for 48
-months will recieve an exchange of 1:100 HNT to veHNT. Any time period in between that will be
+stake HNT for 6 months, will receive an exchange of 1:1 HNT to veHNT. Those that stake veHNT for 48
+months will receive an exchange of 1:100 HNT to veHNT. Any time period in between that will be
 treated on a linear scale from 1 to 100.
 
-For example: I choose to lock up 10 HNT for 6 months. I recieve 10 veHNT. After 6 months, my veHNT
-decays to 0 and I recieve my 10 HNT back into my wallet.
+For example: I choose to lock up 10 HNT for 6 months. I receive 10 veHNT. After 6 months, my veHNT
+decays to 0 and I receive my 10 HNT back into my wallet.
 
 ### How Can I Obtain veHNT?
 
-Staking HNT for veHNT will be done on [Realms](https://dao-beta.mango.markets/realms). This is not
-available today.
+Staking HNT for veHNT will firstly be done on [Realms](https://dao-beta.mango.markets/realms). 
+This is not available today.
 
 Check out a [DAO beta view](https://dao-beta.mango.markets/dao/MNGO) on Realms today.
 
@@ -235,7 +235,7 @@ For example: Staking 10 HNT for 6 months gets 30 veHNT (10x1x3) that decays from
 the end of the staking period and 10 HNT is returned to the wallet.
 
 Staking 20 HNT for 24 months gets around 2598 veHNT (20x43.3x3) and these decay to 60 veHNT at 6
-months and then remain at 60 veHNT that decays to 0 veHNT at the end of the last month of the
+months and then decay slower to 0 veHNT at the end of the last month of the
 staking period and 20 HNT is returned to the wallet.
 
 ### Will I Earn HNT by Staking For veHNT?
@@ -243,14 +243,14 @@ staking period and 20 HNT is returned to the wallet.
 No. HNT stakers will not actually earn anymore HNT than they stake.
 
 HNT staked to veHNT will not earn more HNT at the end of the staking period. When you stake 1 HNT to
-1 veHNT for your set lock-up period, you will recieve the same amount of HNT back, at the end of the
+1 veHNT for your set lock-up period, you will receive the same amount of HNT back, at the end of the
 lock-up period.
 
 However, when you stake HNT into veHNT you are allowed to delegate your veHNT into one or more
 subDAOs (such as IOT and/or MOBILE) and the subDAOs allocate up to 6% of their token emissions to
 the veHNT owners delegating to that subDAO.
 
-For example: When you delegate your veHNT to the IOT subDAO, you recieve IOT every epoch directly
+For example: When you delegate your veHNT to the IOT subDAO, you receive IOT every epoch directly
 into your Helium Wallet. This IOT can then be burned at the IOT subDAO treasury for HNT at the floor
 level of the IOT/HNT treasury exchange rate and deposited into your Helium Wallet.
 
@@ -258,18 +258,18 @@ level of the IOT/HNT treasury exchange rate and deposited into your Helium Walle
 
 1. To stake, transfer HNT into your Helium Wallet App (black icon app). Perform this step if you do
    not already have HNT in your wallet.
-2. Using the Helium Wallet App, stake HNT into veHNT, and define the period of lock-up. The
+2. Using the Helium Wallet App/Realms, stake HNT into veHNT, and define the period of lock-up. The
    granularity of selection will likely be in blocks.
-3. Using the Helium Wallet App, delegate that veHNT into one or more existing subDAOs. You may have
-   to complete several transactions depending on how many subDAOs you are delegating to.
+3. Using the Helium Wallet App/Realms, delegate that veHNT into one or more existing subDAOs. You may 
+   have to complete several transactions depending on how many subDAOs you are delegating to.
 4. Your delegated HNT will count towards the subDAOs Utility Score and provide increased HNT
    earnings in the subDAO's treasury per epoch.
 
-This process should be farily simple in the black wallet app. More instructions will be provided as
-we get closer to the Solana migration.
+This process should be fairly simple in the black wallet app. More instructions will be provided on realms 
+usage as we get closer to the Solana migration.
 
 All staking and vote escrow delegation operations will be performed within a Solana compatible
-Wallet App or the Helium wallet CLI. The black Helium Wallet app will be Solana compatible.
+Wallet App/Realms or the Helium wallet CLI. The black Helium Wallet app will be Solana compatible.
 
 - Staking HNT to veHNT
 - Increasing the veHNT staking period for existing veHNT
@@ -287,26 +287,26 @@ Note: Once you delegate veHNT, you cannot un-delegate. You must wait for the loc
 ### How Granular Is The veHNT Linear Decrease?
 
 The decay in the veHNT quantity in a wallet is granulated per epoch, and the veHNT delegated to a
-subDAo decays at the same rate.
+subDAO decays at the same rate.
 
 A 48 month lock-in period has approximately 42 (48-6 months) x 30 (days) x 48 epochs (30 mins) =
 60,480 linear steps between 100 veHNT and 1 veHNT.
 
 After 1 epoch has passed after staking a single 1 HNT for 48 months the quantity of veHNT in the
 wallet will decay from 100 veHNT to 99.998347 veHNT. This will decrease by this very small amount
-every 30 mins over the 42 months till it reaches 1 veHNT and remains at 1 veHNT for 6 months.
+every 30 mins over the 42 months till it reaches 1 veHNT and then decays at lower rate to 0.
 
 A table showing the approximate HNT to veHNT multiplier for each month of starting a stake or veHNT
 a stake has decayed to. Delegating veHNT to a subDAO or veDNT staking decays at the same rates.
 
 | Months staked or decayed to | veHNT held |
 | :-------------------------: | :--------: |
-|         0 (Decayed)         |    0.0     |
-|         1 (Decayed)         |    1.0     |
-|         2 (Decayed)         |    1.0     |
-|         3 (Decayed)         |    1.0     |
-|         4 (Decayed)         |    1.0     |
-|         5 (Decayed)         |    1.0     |
+|              0              |    0.0     |
+|              1              |    0.17    |
+|              2              |    0.33    |
+|              3              |    0.50    |
+|              4              |    0.67    |
+|              5              |    0.83    |
 |              6              |    1.0     |
 |              7              |    3.4     |
 |              8              |    5.7     |
@@ -350,6 +350,8 @@ a stake has decayed to. Delegating veHNT to a subDAO or veDNT staking decays at 
 |             46              |    95.3    |
 |             47              |    97.6    |
 |             48              |    100     |
+
+
 
 ### Can I Increase My Staking Period At Any Time?
 
